--- a/notebooks/demo.ipynb
+++ b/notebooks/demo.ipynb
@@ -30,16 +30,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['c:\\\\Users\\\\Tilly\\\\anaconda3\\\\envs\\\\scientific_coding\\\\python312.zip', 'c:\\\\Users\\\\Tilly\\\\anaconda3\\\\envs\\\\scientific_coding\\\\DLLs', 'c:\\\\Users\\\\Tilly\\\\anaconda3\\\\envs\\\\scientific_coding\\\\Lib', 'c:\\\\Users\\\\Tilly\\\\anaconda3\\\\envs\\\\scientific_coding', '', 'c:\\\\Users\\\\Tilly\\\\anaconda3\\\\envs\\\\scientific_coding\\\\Lib\\\\site-packages', 'c:\\\\Users\\\\Tilly\\\\anaconda3\\\\envs\\\\scientific_coding\\\\Lib\\\\site-packages\\\\win32', 'c:\\\\Users\\\\Tilly\\\\anaconda3\\\\envs\\\\scientific_coding\\\\Lib\\\\site-packages\\\\win32\\\\lib', 'c:\\\\Users\\\\Tilly\\\\anaconda3\\\\envs\\\\scientific_coding\\\\Lib\\\\site-packages\\\\Pythonwin', 'c:\\\\Users\\\\Tilly\\\\anaconda3\\\\envs\\\\scientific_coding\\\\Lib\\\\site-packages\\\\setuptools\\\\_vendor', 'c:\\\\Users\\\\Tilly\\\\anaconda3\\\\envs\\\\scientific_coding\\\\b1-coding-practical-mt24\\\\uuv_mission', 'c:\\\\Users\\\\Tilly\\\\anaconda3\\\\envs\\\\scientific_coding\\\\b1-coding-practical-mt24\\\\uuv_mission']\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'uuv_mission'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 12\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(sys\u001b[38;5;241m.\u001b[39mpath)\n\u001b[0;32m     11\u001b[0m \u001b[38;5;66;03m# Import Mission from uuv_mission.dynamic\u001b[39;00m\n\u001b[1;32m---> 12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01muuv_mission\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdynamic\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Mission\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01muuv_mission\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdynamic\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Submarine\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01muuv_mission\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdynamic\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ClosedLoop\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'uuv_mission'"
+     ]
+    }
+   ],
    "source": [
-    "# Import relevant modules\n",
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "# Add the path to the uuv_mission directory\n",
+    "module_path = os.path.abspath(os.path.join('..', 'uuv_mission'))  # Go one level up to access uuv_mission\n",
+    "sys.path.append(module_path)\n",
+    "\n",
+    "# Verify the new path has been added\n",
+    "print(sys.path)\n",
+    "\n",
+    "# Import Mission from uuv_mission.dynamic\n",
+    "from uuv_mission.dynamic import Mission\n",
+    "from uuv_mission.dynamic import Submarine\n",
+    "from uuv_mission.dynamic import ClosedLoop\n",
+    "\n",
+    "# Import PDController from control.pd_controller\n",
+    "from uuv_mission.control import PDController\n",
+    "\n",
     "\n",
     "sub = Submarine()\n",
     "# Instantiate your controller (depending on your implementation)\n",
+    "controller = PDController(kp=1.0, kd=0.1)\n",
     "closed_loop = ClosedLoop(sub, controller)\n",
-    "mission = Mission.from_csv(\"path/to/file\") # You must implement this method in the Mission class\n",
+    "mission = Mission.from_csv(os.path.join('..', 'data', 'mission.csv'))  # Adjust path to the CSV file\n",
+    "\n",
     "\n",
     "trajectory = closed_loop.simulate_with_random_disturbances(mission)\n",
     "trajectory.plot_completed_mission(mission)"
@@ -48,7 +86,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "first-venv",
+   "display_name": "scientific_coding",
    "language": "python",
    "name": "python3"
   },
@@ -62,7 +100,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
